# free_law_cite_checker

./: .env.example  .gitignore  CLAUDE.md  README  README.md  cite_check.py  cite_checker.py  pyproject.toml
.claude/commands/: cite_check.md  cite_checker.md  cite_extract.md  cite_extract_and_check.md  extract_cites.md
data/inputs/: citecheck_example.md  legal_memo.md
