[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "free-law-cite-checker"
version = "0.1.0"
description = "A Python-based tool for validating legal citations using the CourtListener API"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "termcolor>=2.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["cite_check.py"]